# disk-space-monitor

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  __main__.py  config.py  monitor.py  sentry_client.py
tests/: __init__.py  test_config.py  test_monitor.py
